add favicon and title

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon16x16.png" sizes="16x16" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/favicon500x500.png"
+      sizes="500x500"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Juicy Crush – Match, Smash & Squeeze the Fun!</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
