--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,21 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    <load src="partials/menu.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <main>
+      <load ="/partials/home.html" />
+      <load ="/partials/overview.html" />
+      <load ="/partials/features.html" />
+      <load ="/partials/play.html" />
+      <load ="/partials/game.html" />
+      <load ="/partials/sounds.html" />
+      <load ="/partials/developers.html" />
+      <load ="/partials/speedrun.html" />
+      <load ="/partials/secrets.html" />
+    </main>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load src="./partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
