add symbols and id

--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,27 @@
       sizes="500x500"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juicy Crush – Match, Smash & Squeeze the Fun!</title>
+    <title>Juicy Crush - Match, Smash & Squeeze the Fun!</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
-    <load ="partials/header.html" />
-    <load src="partials/menu.html" />
+    <load src="./partials/header.html" />
+    <load src="./partials/menu.html" />
 
     <main>
-      <load ="/partials/home.html" />
-      <load ="/partials/overview.html" />
-      <load ="/partials/features.html" />
-      <load ="/partials/play.html" />
-      <load ="/partials/game.html" />
-      <load ="/partials/sounds.html" />
-      <load ="/partials/developers.html" />
-      <load ="/partials/speedrun.html" />
-      <load ="/partials/secrets.html" />
+      <load src="./partials/home.html" />
+      <load src="./partials/overview.html" />
+      <load src="./partials/features.html" />
+      <load src="./partials/play.html" />
+      <load src="./partials/game.html" />
+      <load src="./partials/sounds.html" />
+      <load src="./partials/developers.html" />
+      <load src="./partials/speedrun.html" />
+      <load src="./partials/secrets.html" />
     </main>
 
     <load src="./partials/footer.html" />
+    <load src="./partials/cookies.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
