--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,18 @@
       sizes="500x500"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juicy Crush - Match, Smash & Squeeze the Fun!</title>
+    <meta
+      name="description"
+      content="Juicy Crush – A refreshing match-3 puzzle game where you match, smash, and squeeze fruits to solve exciting puzzles!"
+    />
+    <meta
+      name="keywords"
+      content="Juicy Crush, match-3 puzzle, fruit game, relaxing puzzle, brain teaser, casual game, leaderboard challenge"
+    />
+    <meta name="author" content="LMKS" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://juicycrush.site" />
+    <title>Juicy Crush – Match, Smash & Squeeze the Fun!</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
