--- a/src/cookies-policy.html
+++ b/src/cookies-policy.html
@@ -6,5 +6,8 @@
     <title>Cookies Policy</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
-  <body></body>
+  <body>
+    <h1>Cookies Policy</h1>
+    <load src="./partials/footer.html" />
+  </body>
 </html>
