--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -6,5 +6,8 @@
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
-  <body></body>
+  <body>
+    <h1>Privacy Policy</h1>
+    <load src="./partials/footer.html" />
+  </body>
 </html>
