--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -6,5 +6,8 @@
     <title>Terms and Conditions</title>
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
-  <body></body>
+  <body>
+    <h1>Terms and Conditions</h1>
+    <load src="./partials/footer.html" />
+  </body>
 </html>
