--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
-    <h1>Privacy Policy</h1>
+    <!-- <h1>Privacy Policy</h1> -->
+    <load src="./partials/privacy-p.html" />
     <load src="./partials/footer.html" />
   </body>
 </html>
