--- a/src/cookies-policy.html
+++ b/src/cookies-policy.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
-    <h1>Cookies Policy</h1>
+    <load src="./partials/cookies-p.html" />
     <load src="./partials/footer.html" />
   </body>
 </html>
