--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
-    <h1>Terms and Conditions</h1>
+    <load src="./partials/terms.html" />
     <load src="./partials/footer.html" />
   </body>
 </html>
